--- a/complex/k8s/client-cluster-ip-service.yaml
+++ b/complex/k8s/client-cluster-ip-service.yaml
@@ -9,3 +9,16 @@ spec:
   ports:
     - port: 3000
       targetPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: users-service
+spec:
+  selector:
+    app: web
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
