--- a/complex/k8s/client.deployment.yaml
+++ b/complex/k8s/client.deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: stephengrider/multi-client
+          image: gsylverman/multi-client
           ports:
             - containerPort: 3000
           imagePullPolicy: IfNotPresent
