--- a/complex/k8s/server-deployment.yaml
+++ b/complex/k8s/server-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: stephengrider/multi-server
+          image: gsylverman/multi-server
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5000
