--- a/complex/k8s/worker-deployment.yaml
+++ b/complex/k8s/worker-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: worker
-          image: stephengrider/multi-worker
+          image: gsylverman/multi-worker
           imagePullPolicy: IfNotPresent
       restartPolicy: Always
   selector:
